--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
       <div id="quote-box" class="quote-box">
         <p class="quote">Every great developer you know got there by solving problems they were unqualified to solve until they actually did it.</p>
         <p class="source">Patrick McKenzie<span class="citation">Twitter</span><span class="year">2016</span></p>
+        <p class="category">category: success</p>
+        <p class="source-description">Patrick McKenzie is an American engineer, software developer, consultant, and entrepreneur.</p>
+
       </div>
+      <div class="clear"></div>
     </div>
     
     <script src="js/script.js"></script>
